tests/baselines/reference/APISample_jsdoc.errors.txt
typescript_standalone.d.ts(21,28): error TS1005: ';' expected.
typescript_standalone.d.ts(21,41): error TS1005: ';' expected.
typescript_standalone.d.ts(8518,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8518,40): error TS1005: ';' expected.
typescript_standalone.d.ts(8974,28): error TS1005: ';' expected.
typescript_standalone.d.ts(8974,42): error TS1005: ';' expected.
typescript_standalone.d.ts(9234,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9234,46): error TS1005: ';' expected.
typescript_standalone.d.ts(9584,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9584,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9608,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9608,36): error TS1005: ';' expected.
typescript_standalone.d.ts(9695,28): error TS1005: ';' expected.
typescript_standalone.d.ts(9695,38): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10860,57): error TS1005: ';' expected.
typescript_standalone.d.ts(10871,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10871,41): error TS1005: ';' expected.
typescript_standalone.d.ts(10881,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10881,48): error TS1005: ';' expected.
typescript_standalone.d.ts(10956,28): error TS1005: ';' expected.
typescript_standalone.d.ts(10956,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11013,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11013,47): error TS1005: ';' expected.
typescript_standalone.d.ts(11067,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11067,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11087,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11087,44): error TS1005: ';' expected.
typescript_standalone.d.ts(11097,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11097,35): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11131,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11134,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11134,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11138,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11138,45): error TS1005: ';' expected.
typescript_standalone.d.ts(11156,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11156,56): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11182,36): error TS1005: ';' expected.
typescript_standalone.d.ts(11185,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11185,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11197,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11197,43): error TS1005: ';' expected.
typescript_standalone.d.ts(11227,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11227,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11261,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11272,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11272,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11296,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11296,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11304,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11304,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11308,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11308,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11338,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11338,40): error TS1005: ';' expected.
typescript_standalone.d.ts(11381,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11381,41): error TS1005: ';' expected.
typescript_standalone.d.ts(11568,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11568,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11570,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11570,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11574,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11574,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11576,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11578,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11580,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11582,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11591,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11593,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11595,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11595,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11597,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11597,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11599,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11599,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11601,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11601,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11603,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11603,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11605,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11605,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11607,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11607,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11609,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11609,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11611,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11611,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11613,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11613,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11615,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11615,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11617,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11617,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11619,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11619,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11629,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11629,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11631,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11631,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11633,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11633,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11635,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11635,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11637,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11637,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11639,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11639,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11641,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11641,37): error TS1005: ';' expected.
typescript_standalone.d.ts(11643,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11643,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11645,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11645,52): error TS1005: ';' expected.
typescript_standalone.d.ts(11717,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11717,72): error TS1005: ';' expected.
typescript_standalone.d.ts(11719,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11719,38): error TS1005: ';' expected.
typescript_standalone.d.ts(11721,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11721,71): error TS1005: ';' expected.
typescript_standalone.d.ts(11762,28): error TS1005: ';' expected.
typescript_standalone.d.ts(11762,48): error TS1005: ';' expected.


==== tests/cases/compiler/APISample_jsdoc.ts (0 errors) ====
    /*
     * Note: This test is a public API sample. The original sources can be found
     *       at: https://github.com/YousefED/typescript-json-schema
     *           https://github.com/vega/ts-json-schema-generator
     *       Please log a "breaking change" issue for any API breaking change affecting this issue
     */
    
    declare var console: any;
    
    import * as ts from "typescript";
    
    // excerpted from https://github.com/YousefED/typescript-json-schema
    // (converted from a method and modified; for example, `this: any` to compensate, among other changes)
    function parseCommentsIntoDefinition(this: any,
                                         symbol: ts.Symbol,
                                         definition: {description?: string, [s: string]: string | undefined},
                                         otherAnnotations: { [s: string]: true}): void {
        if (!symbol) {
            return;
        }
    
        // the comments for a symbol
        let comments = symbol.getDocumentationComment(undefined);
    
        if (comments.length) {
            definition.description = comments.map(comment => comment.kind === "lineBreak" ? comment.text : comment.text.trim().replace(/\r\n/g, "\n")).join("");
        }
    
        // jsdocs are separate from comments
        const jsdocs = symbol.getJsDocTags();
        jsdocs.forEach(doc => {
            // if we have @TJS-... annotations, we have to parse them
            const { name, text } = doc;
            if (this.userValidationKeywords[name]) {
                definition[name] = this.parseValue(text);
            } else {
                // special annotations
                otherAnnotations[doc.name] = true;
            }
        });
    }
    
    
    // excerpted from https://github.com/vega/ts-json-schema-generator
    export interface Annotations {
        [name: string]: any;
    }
    function getAnnotations(this: any, node: ts.Node): Annotations | undefined {
        const symbol: ts.Symbol = (node as any).symbol;
        if (!symbol) {
            return undefined;
        }
    
        const jsDocTags: ts.JSDocTagInfo[] = symbol.getJsDocTags();
        if (!jsDocTags || !jsDocTags.length) {
            return undefined;
        }
    
        const annotations: Annotations = jsDocTags.reduce((result: Annotations, jsDocTag: ts.JSDocTagInfo) => {
            const value = this.parseJsDocTag(jsDocTag);
            if (value !== undefined) {
                result[jsDocTag.name] = value;
            }
    
            return result;
        }, {});
        return Object.keys(annotations).length ? annotations : undefined;
    }
    
    // these examples are artificial and mostly nonsensical
    function parseSpecificTags(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.Parameter) {
            return ts.getJSDocParameterTags(node as ts.ParameterDeclaration);
        }
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            const func = node as ts.FunctionDeclaration;
            if (ts.hasJSDocParameterTags(func)) {
                const flat: ts.JSDocTag[] = [];
                for (const tags of func.parameters.map(ts.getJSDocParameterTags)) {
                    if (tags) flat.push(...tags);
                }
                return flat;
            }
        }
    }
    
    function getReturnTypeFromJSDoc(node: ts.Node) {
        if (node.kind === ts.SyntaxKind.FunctionDeclaration) {
            return ts.getJSDocReturnType(node);
        }
        let type = ts.getJSDocType(node);
        if (type && type.kind === ts.SyntaxKind.FunctionType) {
            return (type as ts.FunctionTypeNode).type;
        }
    }
    
    function getAllTags(node: ts.Node) {
        ts.getJSDocTags(node);
    }
    
    function getSomeOtherTags(node: ts.Node) {
        const tags: (ts.JSDocTag | undefined)[] = [];
        tags.push(ts.getJSDocAugmentsTag(node));
        tags.push(ts.getJSDocClassTag(node));
        tags.push(ts.getJSDocReturnTag(node));
        const type = ts.getJSDocTypeTag(node);
        if (type) {
            tags.push(type);
        }
        tags.push(ts.getJSDocTemplateTag(node));
        return tags;
    }
    